--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "5.5.1",
     "@react-navigation/stack": "5.5.1",
     "expo": "^41.0.0",
@@ -26,8 +28,9 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "yup": "0.27.0"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
